--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
             </div>
         </div>
-        <div class="row" style="margin:auto; margin-left: 6rem;">
+        <div class="row" style="margin:auto; ">
             <div class="col-md-4">
                 <div class="card p-3" style="width: 18rem; margin: auto;">
                     <img src="https://www.drivespark.com/bikes-photos/models/400x230/cfmoto-300nk_1618474967.jpg/3/" style="width:18rem;" alt="" class="card-image-top " alt="">
